--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1> Michael jackson even peeformed the song</h1> 
   during his landmark Super Bowl haltime show. <br>
   Ffter his initial performance, which incluided a medley consisting of ´jam´, git'billie jean and black or white'. the finale featured a 35,000 person flashcard <br>
-  the finale featured a 35,000 person flashcard performance. <br> Later joining jackson as he sang   his single heal the world, the king of pop shared the estage with 3500 childrem , many dressed in indignous and national costume, as an inflatable globe emerged from the stage. <br>
+  the finale featured a 35,000 person flashcard performance. <br> Later joining jackson as he sang   his single heal the world, <br> the king of pop shared the estage with 3500 childrem , many dressed in indignous and national costume, as an inflatable globe emerged from the stage. <br>
   the haltime show was a hug success, making the first time in super Bowl history tha ratings increased between halves during the game, with a whoopping audience of 133.4 million tuning in to hear Michael jackson´s message for a brighter tomorrow.         
 </body>
 </html>
